<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/nav_home_icon"
        android:title="@string/upcoming" />
    <item
        android:id="@+id/ongoingEventFragment"
        android:icon="@drawable/upcoming_nav_icon"
        android:title="@string/ongoing" />
    <item
        android:id="@+id/finishedEventFragment"
        android:icon="@drawable/nav_check_icon"
        android:title="@string/finished" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/favorite_nav_icon"
        android:title="@string/favorite" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/nav_setting_icon"
        android:title="@string/setting" />
</menu>