<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:backgroundTint="@color/secondary_background"
    app:cardElevation="2dp"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/rvImageLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/event_image"
            android:src="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp">

            <TextView
                android:id="@+id/txEventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:minLines="1"
                android:text="@string/upcoming_course"
                android:textColor="@color/primary_text_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txEventOwner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:minLines="1"
                android:textColor="@color/secondary_text_color"
                android:textSize="14sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/calendar_icon"
                    android:src="@drawable/rounded_calendar_clock_24"
                    app:tint="@color/secondary_text_color" />

                <TextView
                    android:id="@+id/txEventDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:minLines="1"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/location_icon"
                    android:src="@drawable/ion__location_outline__1_"
                    app:tint="@color/secondary_text_color" />

                <TextView
                    android:id="@+id/txEventLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:minLines="1"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
