<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    >
<ScrollView
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.main.EventDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="sticky"
            >
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="Event Detail"
                app:navigationIcon="@drawable/rounded_arrow_back_24"
                app:navigationIconTint="@color/primary_text_color"
                />
        </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="12dp"
                android:layout_marginBottom="8dp"
                app:strokeWidth="0dp">

                <ImageView
                    android:id="@+id/eventImage"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/event_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background" />
            </com.google.android.material.card.MaterialCardView>




        <TextView
            android:id="@+id/eventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_event_name"
            android:layout_marginHorizontal="12dp"
            android:textSize="20sp"
            android:textColor="@color/primary_text_color"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/eventSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_event_name"
            android:layout_marginHorizontal="12dp"
            android:textSize="14sp"
            android:textStyle="italic"
            android:textColor="@color/secondary_text_color"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/shareBtn"
                android:backgroundTint="@color/primary_background"
                android:foreground="?attr/selectableItemBackground"
                android:layout_width="0dp"
                app:cornerRadius="16dp"
                android:layout_height="wrap_content"
                app:icon="@drawable/round_share_24"
                app:iconGravity="start"
                android:layout_weight="1"
                app:iconPadding="8dp"
                app:iconTint="@color/primary_text_color"
                android:textColor="@color/primary_text_color"
                android:text="@string/share"
                android:gravity="center"
                />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="8dp"
                app:dividerColor="@color/secondary_text_color"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/favBtn"
                app:cornerRadius="16dp"
                android:backgroundTint="@color/primary_background"
                android:foreground="?attr/selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:icon="@drawable/round_favorite_24"
                app:iconGravity="start"
                app:iconPadding="8dp"
                android:layout_weight="1"
                app:iconTint="@color/primary_text_color"
                android:textColor="@color/primary_text_color"
                android:text="@string/favorite"
                />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="12dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/handshake"
                android:layout_marginStart="16dp"
                app:tint="@color/primary_color"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/eventOwner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Indosat"
                android:layout_marginStart="4dp"
                android:textSize="14sp"
                android:textColor="@color/secondary_text_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/rounded_calendar_clock_24"
                android:layout_marginStart="16dp"
                app:tint="@color/primary_color"
                tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/eventDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2024-09-26"
                    android:layout_marginStart="4dp"
                    android:textSize="14sp"
                    android:textColor="@color/secondary_text_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/outline_group_24"
                android:layout_marginStart="16dp"
                app:tint="@color/primary_color"
                tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/eventAttendance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="324 / 5000"
                    android:layout_marginStart="4dp"
                    android:textSize="14sp"
                    android:textColor="@color/secondary_text_color"
                    tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ion__location_outline__1_"
                android:layout_marginStart="16dp"
                app:tint="@color/primary_color"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/eventLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Online"
                android:layout_marginStart="4dp"
                android:textSize="14sp"
                android:textColor="@color/secondary_text_color"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Description"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:layout_marginHorizontal="12dp"
            android:textSize="16sp"
            android:textColor="@color/primary_text_color"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/eventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Description"
            android:layout_marginHorizontal="12dp"
            android:textSize="14sp"
            android:textColor="@color/secondary_text_color"
            />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="12dp"
            android:backgroundTint="@color/primary_color"
            android:text="@string/register"
            android:textSize="16sp"
            android:textColor="@color/white"
            />
    </LinearLayout>
</ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="bottom|end"
        android:backgroundTint="@color/primary_color"
        android:layout_margin="16dp"
        android:contentDescription="@string/register_event"
        android:paddingHorizontal="12dp"
        android:visibility="visible"
        android:textColor="@color/white"
        android:text="@string/register_event_lbl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RelativeLayout
        android:id="@+id/loadingView"
        android:background="@color/secondary_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="?attr/colorSurface"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
